storage/xtradb/handler/ha_innodb.cc
@@ -21282,32 +21282,6 @@ ib_warn_row_too_big(const dict_table_t*	table)
 		, prefix ? DICT_MAX_FIXED_COL_LEN : 0);
 }
 
-/********************************************************************//**
-Helper function to push warnings from InnoDB internals to SQL-layer. */
-UNIV_INTERN
-void
-ib_push_warning(
-	trx_t*		trx,	/*!< in: trx */
-	ulint		error,	/*!< in: error code to push as warning */
-	const char	*format,/*!< in: warning message */
-	...)
-{
-	va_list args;
-	THD *thd = (THD *)trx->mysql_thd;
-	char *buf;
-#define MAX_BUF_SIZE 4*1024
-
-	va_start(args, format);
-	buf = (char *)my_malloc(MAX_BUF_SIZE, MYF(MY_WME));
-	vsprintf(buf,format, args);
-
-	push_warning_printf(thd, Sql_condition::WARN_LEVEL_WARN,
-		convert_error_code_to_mysql((dberr_t)error, 0, thd),
-		buf);
-	my_free(buf);
-	va_end(args);
-}
-
 /*************************************************************//**
 Check for a valid value of innobase_compression_algorithm.
 @return	0 for valid innodb_compression_algorithm. */
